--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -70,7 +70,58 @@ input, textarea {
 }
 
 @media (max-width: 768px) {
+
+    .contact-form {
+        gap: 12px;
+
+        >button {
+            width: 120px;
+            height: 44px;
+            font-size: 12px;
+        }
+    }
+
     .form-group {
         width: 100%;
+    }
+
+    >label {
+        font-size: 12px;
+    }
+
+    >input {
+        height: 34px;
+        font-size: 14px;
+        padding: 8px;
+    }
+
+    >textarea {
+        height: 148px;
+        font-size: 14px;
+        padding: 8px;
+    }
+}
+
+@media (max-width: 425px) {
+
+    .contact-form {
+
+        >button {
+            width: 100px;
+            height: 40px;
+        }
+    }
+
+    >label {
+        font-size: 10px;
+    }
+
+    >input {
+        height: 30px;
+        font-size: 14px;
+    }
+
+    >textarea {
+        height: 140px;
     }
 }
