--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -40,9 +40,7 @@
 
     .projects-header {
         width: 450px;
-        >h1 {
-            font-size: 6vw;
-        }
+
         >p {
             font-size: 16px;
             line-height: 120%;
